adding check availables filter

--- a/src/Drones.Core/Localization/SourceFiles/Drones.xml
+++ b/src/Drones.Core/Localization/SourceFiles/Drones.xml
@@ -141,5 +141,6 @@
 	<text name="Drone">Drone</text>
 	<text name="SelectToLoad">Select to load</text>
 	<text name="LoadToDrone">Load to drone {0}</text>
+    <text name="AvailablesDrone">Availables drones</text>
   </texts>
 </localizationDictionary>
