--- a/src/Drones.Core/Localization/SourceFiles/Drones.xml
+++ b/src/Drones.Core/Localization/SourceFiles/Drones.xml
@@ -146,6 +146,7 @@
 	<text name="BatteryLevel">Battery level</text>
 	<text name="BatteryLevelResult">The battery level is {0} %</text>
 	<text name="DroneLoadedWeight">The actual loaded weigth of the drone is {0}</text>
-	  
+	<text name="Jobs">Jobs</text>
+	<text name="SelectActivateJobs">Select for activate the jobs</text>
   </texts>
 </localizationDictionary>
